--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         body {
             height: 100%;
             /*background-image: url('<%= BASE_URL %>poker_back.jpg');*/
-            background: linear-gradient(rgba(255,255,255,.8), rgba(255,255,255,.8)), url("<%= BASE_URL %>poker_background.png") no-repeat center center fixed;
+            background: linear-gradient(rgba(255,255,255,.8), rgba(255,255,255,.8)), url("<%= BASE_URL %>background.png") no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
