--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
+        html{
+            height: 100%;
+        }
         body {
             height: 100%;
             /*background-image: url('<%= BASE_URL %>poker_back.jpg');*/
@@ -15,6 +18,9 @@
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
+        }
+        #app{
+            /*height: 100%;*/
         }
     </style>
 </head>
